added emissions summary per user
